# hr-id

./: Cargo.toml  README.md
src/: destream.rs  hash.rs  lib.rs  serde.rs
