[package]
name = "hr-id"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "A human-readable unique ID which supports Unicode, safe for URLs and file paths"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/hr-id.git"

[features]
all = ["hash", "stream", "serde", "uuid"]
hash = ["async-hash", "hex"]
stream = ["destream", "async-trait"]

[dependencies]
async-hash = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }
derive_more = { version = "0.99", features=["display"] }
destream = { version = "0.7", features = [], optional = true }
get-size = "0.1"
get-size-derive = "0.1"
hex = { version = "0.4", optional = true }
serde = { version = "1.0", features = [], optional = true }
safecast = "0.2"
regex = "1.7"
uuid = { version = "1.4", optional = true }
